Added a test case for downloading a FTP file via URLConnection.