@@ -4,17 +4,19 @@ package com.agoda.downloaders;
 import com.agoda.source.FtpSource;
 import com.jcraft.jsch.JSchException;
 import com.jcraft.jsch.SftpException;
+import org.apache.commons.net.ftp.FTPClient;
+import org.apache.commons.net.ftp.FTPFile;
+import org.apache.commons.net.ftp.FTPReply;
+import sun.net.ftp.FtpLoginException;
 
-import java.io.FileOutputStream;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
-import java.nio.channels.Channels;
-import java.nio.channels.ReadableByteChannel;
+import java.text.MessageFormat;
 
 public class FtpDownloader extends Downloader {
-
 
     protected String host;
     protected String user;
@@ -29,22 +31,37 @@ public class FtpDownloader extends Downloader {
 
     @Override
     public void download() throws IOException, URISyntaxException, SftpException, JSchException {
+        if (isAbleToDownloadViaURLConnection(this.sourceURL)) {
+            downloadUsingURLConnection(this.sourceURL);
+        } else {
 
-        ReadableByteChannel readableByteChannel = null;
-        FileOutputStream fileOutputStream = null;
-
-        try {
-            URL url = new URL(this.sourceURL);
-            URLConnection urlConnection = url.openConnection();
-            readableByteChannel = Channels.newChannel(urlConnection.getInputStream());
-            fileOutputStream = new FileOutputStream(this.outputFilePath);
-            fileOutputStream.getChannel().transferFrom(readableByteChannel, 0, urlConnection.getContentLengthLong());
-        } catch (Exception e) {
-            e.printStackTrace();
-        } finally {
-            readableByteChannel.close();
-            fileOutputStream.close();
+            FTPClient ftpClient = connectToFtpServer(this.host, this.user, this.password);
+            URI uri = new URI(this.sourceURL);
+            ftpClient.enterLocalPassiveMode();
+            ftpClient.changeWorkingDirectory(uri.getPath());
+            FTPFile[] ftpFiles = ftpClient.listFiles();
         }
 
+    }
+
+    protected FTPClient connectToFtpServer(String host, String user, String password) throws IOException {
+        FTPClient ftpClient = new FTPClient();
+        ftpClient.connect(host);
+        if (!ftpClient.login(user, password) || !FTPReply.isPositiveCompletion(ftpClient.getReplyCode())) {
+            ftpClient.logout();
+            ftpClient.disconnect();
+            throw new FtpLoginException(MessageFormat.format("Cannot connect to host : {0}", host));
+        }
+        return ftpClient;
+    }
+
+    protected boolean isAbleToDownloadViaURLConnection(String sourceURL) throws URISyntaxException {
+        return new URI(sourceURL).getUserInfo() != null;
+    }
+
+    protected void downloadUsingURLConnection(String sourceURL) throws IOException {
+        URL url = new URL(sourceURL);
+        URLConnection urlConnection = url.openConnection();
+        this.writeStreamData(urlConnection.getInputStream(), urlConnection.getContentLengthLong());
     }
 }
